# AutoWired

./: .clang-format  CMakeLists.txt  main.cpp
src/: AutoWired.h  AutoWiredManager.cpp  AutoWiredManager.h  HelloMethod.cpp  HelloMethod.h  HelloService.cpp  HelloService.h  IMethod.h  IService.h  MethodFactory.h
